--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@primevue/forms": "^4.2.5",
+    "axios": "^1.7.9",
     "pinia": "^2.3.1",
     "pinia-plugin-persist": "^1.0.0",
     "primevue": "^4.2.5",
