--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@primevue/forms": "^4.2.5",
     "@primevue/themes": "^4.2.5",
     "@tailwindcss/vite": "^4.0.1",
+    "@vueuse/core": "^12.5.0",
     "axios": "^1.7.9",
     "pinia": "^2.3.1",
     "pinia-plugin-persist": "^1.0.0",
