--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "chart.js": "^4.4.7",
     "pinia": "^2.3.1",
     "pinia-plugin-persist": "^1.0.0",
     "primevue": "^4.2.5",
