--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "primeicons": "^7.0.0",
     "primevue": "^4.2.5",
     "tailwindcss": "^4.0.1",
+    "tailwindcss-primeui": "^0.4.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
