--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/vite": "^4.0.1",
     "@vueuse/core": "^12.5.0",
     "axios": "^1.7.9",
+    "chart.js": "^4.4.7",
     "pinia": "^2.3.1",
     "pinia-plugin-persist": "^1.0.0",
     "primeicons": "^7.0.0",
